now selectedProductsList go to MealPlanActivity and have error in insert new items , and no change in any list(grocery, pantry, ... ), DataBinding not used .

--- a/app/src/main/res/layout/activity_day_plan.xml
+++ b/app/src/main/res/layout/activity_day_plan.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".ui.add_day.DayPlanActivity">
+    tools:context=".ui.planDay.DayPlanActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_create_meal"
