--- a/app/src/main/res/layout/activity_week_plan.xml
+++ b/app/src/main/res/layout/activity_week_plan.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.add_week.WeekActivity">
+    tools:context=".ui.planWeek.WeekActivity">
 
     <TextView
         android:background="@color/WHITE"
@@ -24,7 +23,7 @@
         android:layout_above="@id/btn_save_week_plan"
         android:layout_below="@id/tv_date"
         tools:itemCount="7"
-        tools:listitem="@layout/item_rv_week" />
+        tools:listitem="@layout/item_rv_day_full" />
 
     <Button
         android:id="@+id/btn_save_week_plan"
