--- a/app/src/main/res/layout/item_rv_product_2.xml
+++ b/app/src/main/res/layout/item_rv_product_2.xml
@@ -4,20 +4,29 @@
     android:id="@+id/cardView_categoryItem"
     android:layout_width="200dp"
     android:layout_height="wrap_content"
+    android:layout_marginEnd="4dp"
     app:cardBackgroundColor="@color/WHITE"
+    android:layout_marginRight="4dp"
     app:cardElevation="2dp"
-    app:cardPreventCornerOverlap="true">
+    app:cardCornerRadius="2dp"
+    app:cardMaxElevation="2dp"
+    app:cardPreventCornerOverlap="true"
+    app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp"
-        android:layout_margin="4dp">
+        android:layout_margin="6dp"
+        android:padding="4dp">
 
         <ImageView
             android:id="@+id/iv_product"
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:contentDescription="@string/todo"
+            android:scaleType="centerCrop"
+            android:src="@drawable/food1"
+            app:layout_constraintBottom_toTopOf="@id/tv_title"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -26,11 +35,11 @@
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:text="Meat"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="#000"
+            app:layout_constraintBottom_toTopOf="@id/tv_second_text"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_product" />
@@ -39,8 +48,9 @@
             android:id="@+id/tv_second_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000"
             android:text="second text"
+            android:textColor="#000"
+            app:layout_constraintBottom_toTopOf="@id/tv_third_text"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
@@ -48,19 +58,32 @@
             android:id="@+id/tv_third_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000"
             android:text="third text"
+            android:textColor="#000"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_second_text" />
 
         <ImageButton
+            android:id="@+id/btn_plus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:background="@drawable/cicle"
+            android:background="@color/WHITE"
+            android:padding="4dp"
             android:src="@drawable/ic_add"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
+
+        <ImageButton
+            android:id="@+id/btn_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/WHITE"
+            android:contentDescription="@string/todo"
+            android:padding="4dp"
+            android:src="@drawable/ic_favorite_border"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/btn_plus" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
