--- a/app/src/main/res/layout/item_rv_product_linear.xml
+++ b/app/src/main/res/layout/item_rv_product_linear.xml
@@ -10,7 +10,7 @@
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:padding="5dp"
-        android:src="@color/GREEN"
+        android:src="@drawable/product"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -50,5 +50,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/tv_2_product_linear"
         app:layout_constraintTop_toBottomOf="@id/tv_1_product_linear" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
