--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -36,6 +36,10 @@
             android:id="@+id/nav_RecipesList"
             android:icon="@drawable/ic_menu_send"
             android:title="@string/menu_recipes_list" />
+        <item
+            android:id="@+id/nav_meal"
+            android:icon="@drawable/ic_add_box"
+            android:title="@string/menu_meal" />
     </group>
 
 
