MealPlanActivity finished Tasks 1-delete from MealProductsList 2-remove addProduct Flouting Button 3-add addProduct menu icon 4-using item_rv_product_x.xml for productsList 5-change colors (set1_1,2,3,4)

--- a/app/src/main/res/menu/menu_meal_plan_activity.xml
+++ b/app/src/main/res/menu/menu_meal_plan_activity.xml
@@ -6,6 +6,11 @@
         android:icon="@drawable/ic_edit"
         android:title="meal title"
         app:showAsAction="ifRoom|collapseActionView" />
+    <item
+        android:id="@+id/add_new_product"
+        android:icon="@drawable/ic_add_box"
+        android:title="new_product"
+        app:showAsAction="ifRoom|collapseActionView" />
 
     <item
         android:id="@+id/save_meal"
