--- a/app/src/main/res/layout/activity_meal_plan.xml
+++ b/app/src/main/res/layout/activity_meal_plan.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
+    android:background="@color/MINT"
     tools:context=".ui.planMeal.MealPlanActivity">
 
 
@@ -12,13 +12,11 @@
         android:id="@+id/v2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:cardBackgroundColor="@color/BLUE"
-        app:cardCornerRadius="8dp"
+        app:cardBackgroundColor="@color/MINT"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@color/NAVY"
+        app:strokeColor="@color/Emerald_green"
         app:strokeWidth="2dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
