--- a/app/src/main/res/layout/item_rv_product_name.xml
+++ b/app/src/main/res/layout/item_rv_product_name.xml
@@ -1,26 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardView_product_title"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="4dp"
-    android:layout_margin="2dp"
-    android:id="@+id/cardView_product_title"
-    app:strokeColor="@color/NAVY"
-    app:strokeWidth="2dp"
+    android:layout_gravity="center"
+    android:elevation="8dp"
+    app:cardBackgroundColor="@color/set1_1"
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true">
 
-    <TextView
-        android:id="@+id/tv_product_title"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:text="@string/app_name"
-        android:textAllCaps="false"
-        android:textColor="@color/NAVY"
-        android:textStyle="bold" />
+        android:layout_margin="4dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_product_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:text="@string/app_name"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/set1_4" />
+
+        <ImageButton
+            android:id="@+id/btn_delete_product"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/set1_1"
+            android:src="@drawable/ic_remove_circle_outline" />
+    </LinearLayout>
 
 
 </com.google.android.material.card.MaterialCardView>
