weekPlanActivity task 1- design weekPlanActivity 2- get all days, meals,products for week 3- we have slaw response in move from weekPlan to mealPlan because of more loading products in the same activity 4- change design of weeks fragment 5- change design of home fragment switcher height 150dp فاما الانسان اذا ما ابتلاه ربه فاكرمه و نعمه فيقول ربي اكرمن

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+
+    android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/set1_1">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <com.smarteist.autoimageslider.SliderView
-                android:layout_gravity="top"
                 android:id="@+id/imageSlider"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="180dp"
+                android:layout_gravity="top"
                 android:layout_weight="1"
                 app:layout_constraintBottom_toTopOf="@id/rv"
                 app:sliderAnimationDuration="600"
@@ -37,11 +39,11 @@
                 app:sliderStartAutoCycle="true" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:padding="4dp"
-                tools:listitem="@layout/item_rv_category"
                 android:id="@+id/rv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                tools:listitem="@layout/item_rv_category" />
 
         </LinearLayout>
     </ScrollView>
