--- a/app/src/main/res/layout/fragment_weeks.xml
+++ b/app/src/main/res/layout/fragment_weeks.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/set1_1"
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
