--- a/app/src/main/res/layout/item_rv_category.xml
+++ b/app/src/main/res/layout/item_rv_category.xml
@@ -2,11 +2,15 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView_categoryItem"
-    android:layout_width="200dp"
-    android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/WHITE"
-    app:cardElevation="8dp"
-    app:cardPreventCornerOverlap="true">
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    android:layout_gravity="center"
+    android:layout_margin="8dp"
+    android:shape="rectangle"
+    app:cardBackgroundColor="@color/set1_1"
+    app:cardCornerRadius="4dp"
+    app:cardElevation="2dp"
+    app:cardPreventCornerOverlap="false">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,27 +21,40 @@
             android:id="@+id/iv_category"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/image2"
+            android:layout_margin="8dp"
+            android:scaleType="center"
+            android:src="@drawable/meat"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintCircleRadius="4dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_title_category"
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:background="@color/NAVY"
-            android:padding="4dp"
-            android:text="Meat"
-            android:textAllCaps="true"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/WHITE"
-            android:textStyle="bold"
+            android:elevation="16dp"
+            app:cardBackgroundColor="@color/set1_1"
+            app:cardCornerRadius="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            app:layout_constraintLeft_toLeftOf="parent">
+
+            <TextView
+                android:id="@+id/tv_title_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:padding="4dp"
+                android:text="Meat"
+                android:textAllCaps="true"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@color/set1_4"
+                android:textStyle="italic"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent" />
+
+        </androidx.cardview.widget.CardView>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
