--- a/app/src/main/res/layout/item_rv_weeks_view.xml
+++ b/app/src/main/res/layout/item_rv_weeks_view.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView_weeksViewItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/WHITE"
-    app:cardCornerRadius="16dp"
-    app:cardElevation="1dp"
+    app:cardBackgroundColor="@color/set1_1"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="8dp"
     app:cardPreventCornerOverlap="true"
-    app:cardUseCompatPadding="true"
-    tools:context=".ui.view_weeks.WeeksViewActivity">
+    app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -24,7 +22,7 @@
             android:text="Sunday"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/NAVY"
+            android:textColor="@color/set1_4"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,7 +33,7 @@
             android:text="Feb 04 "
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/GREEN"
+            android:textColor="@color/set1_3"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_weekTitle" />
     </androidx.constraintlayout.widget.ConstraintLayout>
