--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@id/nav_home">
 
     <fragment
         android:id="@+id/nav_home"
@@ -45,4 +45,9 @@
         android:name="allam9072.mealplanner.ui.meals.MealsFragment"
         android:label="@string/menu_meal"
         tools:layout="@layout/meals_fragment" />
+    <fragment
+        android:id="@+id/nav_recipes"
+        android:name="allam9072.mealplanner.ui.list_Recipes.RecipesFragment"
+        android:label="@string/menu_recipes_list"
+        tools:layout="@layout/recipes_fragment" />
 </navigation>
