--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -46,8 +46,8 @@
         android:label="@string/menu_meal"
         tools:layout="@layout/meals_fragment" />
     <fragment
-        android:id="@+id/nav_recipes"
+        android:id="@+id/recipesFragment"
         android:name="allam9072.mealplanner.ui.list_Recipes.RecipesFragment"
-        android:label="@string/menu_recipes_list"
+        android:label="recipes_fragment"
         tools:layout="@layout/recipes_fragment" />
 </navigation>
