finish all of home fragment clean code

--- a/app/src/main/res/layout/item_rv_product_x.xml
+++ b/app/src/main/res/layout/item_rv_product_x.xml
@@ -18,7 +18,7 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="95dp"
-            android:contentDescription="@string/a11y_plant_item_image"
+            android:contentDescription="@string/app_name"
             android:padding="4dp"
             android:src="@drawable/product"
             app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:gravity="center_horizontal"
-            android:text="@string/menu_meal"
+            android:text="@string/app_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:gravity="center_horizontal"
-            android:text="@string/plant_date_header"
+            android:text="@string/app_name"
             android:textAppearance="?attr/textAppearanceSubtitle2"
             android:textColor="?attr/colorAccent"
             android:textStyle="bold"
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:gravity="center_horizontal"
-            android:text="@string/watered_date_header"
+            android:text="@string/app_name"
             android:textAppearance="?attr/textAppearanceSubtitle2"
             android:textColor="?attr/colorAccent"
             android:textStyle="bold"
