--- a/app/src/main/res/layout/activity_product_profile.xml
+++ b/app/src/main/res/layout/activity_product_profile.xml
@@ -32,10 +32,10 @@
                 android:id="@+id/iv_product"
                 android:layout_width="match_parent"
                 android:layout_height="278dp"
-                android:contentDescription="@string/plant_detail_image_content_description"
+                android:contentDescription="@string/app_name"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/food3"
+                android:src="@drawable/x"
                 app:layout_collapseMode="parallax" />
 
             <androidx.appcompat.widget.Toolbar
@@ -87,7 +87,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:gravity="center_horizontal"
-                android:text="@string/watering_needs_prefix"
+                android:text="@string/app_name"
                 android:textColor="?attr/colorAccent"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
