--- a/app/src/main/res/layout/activity_recipes_profile.xml
+++ b/app/src/main/res/layout/activity_recipes_profile.xml
@@ -68,10 +68,10 @@
                     android:id="@+id/iv_rd_main_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:contentDescription="@string/plant_detail_image_content_description"
+                    android:contentDescription="@string/app_name"
                     android:fitsSystemWindows="true"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/food2"
+                    android:src="@drawable/x"
                     app:layout_collapseMode="parallax" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
