--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,9 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="margin_8">8dp</dimen>
+    <dimen name="padding_8">8dp</dimen>
+    <dimen name="card_radios_8">8dp</dimen>
+    <dimen name="elevation">8dp</dimen>
+
 </resources>
