--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -45,8 +45,9 @@
         android:label="@string/menu_my_shopping_basket"
         tools:layout="@layout/fragment_my_shopping_basket" />
     <fragment
-        android:id="@+id/nav_meal"
-        android:name="allam9072.mealplanner.ui.meals.MealsFragment"
-        android:label="@string/menu_meal"
-        tools:layout="@layout/meals_fragment" />
+        android:id="@+id/nav_favorite"
+        android:name="allam9072.mealplanner.ui.favorite.FavoriteFragment"
+        android:label="@string/favorite"
+        tools:layout="@layout/favorite_fragment" />
+
 </navigation>
