--- a/app/src/main/res/layout/activity_product_profile.xml
+++ b/app/src/main/res/layout/activity_product_profile.xml
@@ -18,7 +18,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/toolbar_layout"
+            android:id="@+id/p2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
@@ -29,31 +29,19 @@
             app:toolbarId="@id/toolbar">
 
             <ImageView
-                android:id="@+id/iv_product"
+                android:id="@+id/iv_pp"
                 android:layout_width="match_parent"
                 android:layout_height="278dp"
-                android:contentDescription="@string/app_name"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/x"
                 app:layout_collapseMode="parallax" />
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@android:color/transparent"
-                app:contentInsetStartWithNavigation="0dp"
-                app:layout_collapseMode="pin"
-                app:navigationIcon="@drawable/ic_arrow"
-                app:titleTextColor="@color/BLACK" />
-
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/plant_detail_scrollview"
+        android:id="@+id/p1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
@@ -69,8 +57,7 @@
                 android:id="@+id/tv_product_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_margin="@dimen/margin_8"
                 android:gravity="center_horizontal"
                 android:text="@{viewModel.plant.name}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -79,47 +66,16 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Apple" />
 
-            <TextView
-                android:id="@+id/tv_product_price"
-                android:layout_width="0dp"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_pp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:gravity="center_horizontal"
-                android:text="@string/app_name"
-                android:textColor="?attr/colorAccent"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_product_name" />
-
-            <TextView
-                android:id="@+id/tv_product_weight"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:gravity="center_horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_product_price"
-                tools:text="every 7 days" />
-
-            <TextView
-                android:id="@+id/tv_product_description"
-                style="?android:attr/textAppearanceMedium"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:minHeight="555dp"
-                android:textIsSelectable="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_product_weight"
-                tools:text="Details about the plant" />
+                android:layout_margin="@dimen/margin_8"
+                android:foregroundGravity="center"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_product_name"
+                tools:listitem="@layout/item_rv_pp_values" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
