--- a/app/src/main/res/layout/item_rv_recipe_integers.xml
+++ b/app/src/main/res/layout/item_rv_recipe_integers.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="90dp"
-    android:layout_height="wrap_content"
+    android:layout_width="70dp"
+    android:layout_height="76dp"
     android:layout_gravity="center"
-    android:layout_weight="1"
-    android:padding="1dp">
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
+    android:elevation="12dp"
+    android:padding="1dp"
+    app:cardBackgroundColor="@color/set1_4_1"
+    app:cardCornerRadius="16dp"
+    app:cardElevation="2dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent">
 
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="70dp"
-        android:layout_height="76dp"
-        android:elevation="12dp"
-        app:cardBackgroundColor="@color/set1_4_1"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/tv_1_recipe_ints"
@@ -26,23 +27,26 @@
             android:paddingTop="8dp"
             android:text="calories"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/set1_1" />
-    </com.google.android.material.card.MaterialCardView>
+            android:textColor="@color/set1_1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_2_recipe_ints"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:elevation="2dp"
-        android:gravity="end"
-        android:lines="1"
-        android:text="45g"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/set1_1_1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        <TextView
+            android:id="@+id/tv_2_recipe_ints"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:elevation="2dp"
+            android:gravity="end"
+            android:lines="1"
+            android:text="45g"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/set1_1_1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
+</com.google.android.material.card.MaterialCardView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
 
