--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -29,9 +29,9 @@
             android:icon="@drawable/ic_shopping_basket"
             android:title="@string/menu_my_shopping_basket" />
         <item
-            android:id="@+id/nav_todoList"
-            android:icon="@drawable/ic_todo_list"
-            android:title="@string/menu_todo_list" />
+            android:id="@+id/nav_favorite"
+            android:icon="@drawable/ic_favorite"
+            android:title="@string/favorite" />
 
         <item
             android:id="@+id/nav_setting"
