--- a/app/src/main/res/layout/market_fragment.xml
+++ b/app/src/main/res/layout/market_fragment.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/set1_1"
-    tools:context=".ui.market.MarketActivity">
+    android:background="@color/set1_1">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_market"
